// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddCourseFormComponent should snap when not enabled 1`] = `
<tm-add-course-form
  closeCourseFormEvent={[Function EventEmitter]}
  courseAdded={[Function EventEmitter]}
  courseService={[Function Object]}
  isAddingCourse="false"
  isEnabled="false"
  newCourseId=""
  newCourseMessageTemplate={[Function TemplateRef_]}
  newCourseName=""
  statusMessageService={[Function Object]}
  timezone={[Function String]}
  timezoneService={[Function Object]}
  timezones={[Function Array]}
>
  <div
    class="card border-primary fill-plain"
  >
    <div
      class="close-header"
    >
      <button
        aria-label="Close"
        class="close"
        type="button"
      >
        <span
          aria-hidden="true"
        >
          ×
        </span>
      </button>
    </div>
    <div
      class="card-body text-center"
    >
      <div
        class="form-group row"
      >
        <label
          class="col-md-3 text-md-right col-form-label"
        >
          Course ID:
        </label>
        <div
          class="col-md-6 text-md-left"
        >
          <input
            class="form-control ng-untouched ng-pristine ng-valid"
            id="new-course-id"
            maxlength="40"
            ngbtooltip="Enter the identifier of the course, e.g.CS3215-2013Semester1."
            placeholder="e.g. CS3215-2013Semester1"
            type="text"
          />
        </div>
      </div>
      <div
        class="form-group row"
      >
        <label
          class="col-md-3 text-md-right col-form-label"
        >
          Course Name:
        </label>
        <div
          class="col-md-6 text-md-left"
        >
          <input
            class="form-control ng-untouched ng-pristine ng-valid"
            id="new-course-name"
            maxlength="64"
            ngbtooltip="Enter the name of the course, e.g. Software Engineering."
            placeholder="e.g. Software Engineering"
            type="text"
          />
        </div>
      </div>
      <div
        class="form-group row"
      >
        <label
          class="col-md-3 text-md-right col-form-label"
        >
          Time Zone:
        </label>
        <div
          class="col-md-6 text-md-left"
        >
          <div
            class="input-group"
          >
            <select
              class="form-control ng-untouched ng-pristine ng-valid"
              id="new-time-zone"
              ngbtooltip="The time zone for the course. You should not
                  need to change this as it is auto-detected based on your device settings. TEAMMATES automatically adjusts
                  to match the current time offset in your area, including clock changes due to daylight saving time."
            >
              
              <option
                value="GMT"
              >
                GMT
              </option>
            </select>
            <span
              class="input-group-btn"
              style="margin-left: 5px;"
            >
              <button
                class="btn btn-primary"
              >
                Auto Detect
              </button>
            </span>
          </div>
        </div>
      </div>
      <div
        class="form-group row"
      >
        <div
          class="col-md-9 offset-md-3 text-md-left"
        >
          <button
            class="btn btn-primary"
            id="btn-save-course"
          >
            
             Add Course 
          </button>
        </div>
      </div>
    </div>
  </div>
</tm-add-course-form>
`;

exports[`AddCourseFormComponent should snap with default fields 1`] = `
<tm-add-course-form
  closeCourseFormEvent={[Function EventEmitter]}
  courseAdded={[Function EventEmitter]}
  courseService={[Function Object]}
  isAddingCourse="false"
  isEnabled={[Function Boolean]}
  newCourseId=""
  newCourseMessageTemplate={[Function TemplateRef_]}
  newCourseName=""
  statusMessageService={[Function Object]}
  timezone={[Function String]}
  timezoneService={[Function Object]}
  timezones={[Function Array]}
>
  <div
    class="card border-primary fill-plain"
  >
    <div
      class="close-header"
    >
      <button
        aria-label="Close"
        class="close"
        type="button"
      >
        <span
          aria-hidden="true"
        >
          ×
        </span>
      </button>
    </div>
    <div
      class="card-body text-center"
    >
      <div
        class="form-group row"
      >
        <label
          class="col-md-3 text-md-right col-form-label"
        >
          Course ID:
        </label>
        <div
          class="col-md-6 text-md-left"
        >
          <input
            class="form-control ng-untouched ng-pristine ng-valid"
            id="new-course-id"
            maxlength="40"
            ngbtooltip="Enter the identifier of the course, e.g.CS3215-2013Semester1."
            placeholder="e.g. CS3215-2013Semester1"
            type="text"
          />
        </div>
      </div>
      <div
        class="form-group row"
      >
        <label
          class="col-md-3 text-md-right col-form-label"
        >
          Course Name:
        </label>
        <div
          class="col-md-6 text-md-left"
        >
          <input
            class="form-control ng-untouched ng-pristine ng-valid"
            id="new-course-name"
            maxlength="64"
            ngbtooltip="Enter the name of the course, e.g. Software Engineering."
            placeholder="e.g. Software Engineering"
            type="text"
          />
        </div>
      </div>
      <div
        class="form-group row"
      >
        <label
          class="col-md-3 text-md-right col-form-label"
        >
          Time Zone:
        </label>
        <div
          class="col-md-6 text-md-left"
        >
          <div
            class="input-group"
          >
            <select
              class="form-control ng-untouched ng-pristine ng-valid"
              id="new-time-zone"
              ngbtooltip="The time zone for the course. You should not
                  need to change this as it is auto-detected based on your device settings. TEAMMATES automatically adjusts
                  to match the current time offset in your area, including clock changes due to daylight saving time."
            >
              
              <option
                value="GMT"
              >
                GMT
              </option>
            </select>
            <span
              class="input-group-btn"
              style="margin-left: 5px;"
            >
              <button
                class="btn btn-primary"
              >
                Auto Detect
              </button>
            </span>
          </div>
        </div>
      </div>
      <div
        class="form-group row"
      >
        <div
          class="col-md-9 offset-md-3 text-md-left"
        >
          <button
            class="btn btn-primary"
            id="btn-save-course"
          >
            
             Add Course 
          </button>
        </div>
      </div>
    </div>
  </div>
</tm-add-course-form>
`;
